# llm-zoomcamp

01-agentic-rag/homework/: README.md  homework.ipynb  homework2026.py  pyproject.toml
02-vector-search/homework/: homework2026.py  homeworkv2.py  pyproject.toml
